# project6_group1

./: .gitignore  README.md
analysis/: ANALYSIS_INSTRUCTIONS.md
data/captures/: .gitkeep  waypoint_001_20260314_173132.npy  waypoint_001_20260314_173132.yaml  waypoint_001_20260314_173230.npy  waypoint_001_20260314_173230.yaml  waypoint_001_20260316_204136.npy  waypoint_001_20260316_204136.yaml  waypoint_001_20260317_201847.npy  waypoint_001_20260317_201847.yaml  waypoint_002_20260317_202224.npy  waypoint_002_20260317_202224.yaml  waypoint_003_20260317_202453.npy  waypoint_003_20260317_202453.yaml  waypoint_004_20260317_202656.npy  waypoint_004_20260317_202656.yaml  waypoint_005_20260317_203013.npy  waypoint_005_20260317_203013.yaml
data/mapping_run/: metadata.yaml
docs/: navigation_strategy.md
figures/rviz_screenshots/: .gitkeep
scan_capture_pkg/: CMakeLists.txt  package.xml
scan_capture_pkg/launch/: scan_capture.launch.py
scan_capture_pkg/scan_capture_pkg/: keyboard_capture.py  scan_capture_node.py
scan_capture_pkg/srv/: CaptureScan.srv
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/scan_capture_pkg/: package.xml  setup.cfg  setup.py
src/scan_capture_pkg/config/: mapping.rviz  measurements.yaml
src/scan_capture_pkg/launch/: scan_capture.launch.py
src/scan_capture_pkg/scan_capture_pkg/: __init__.py  scan_capture_node.py  transform.py
