<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_capture_pkg</name>
  <version>1.0.0</version>
  <description>Waypoint localization with scan capture for TurtleBot3</description>
  <maintainer email="student@university.edu">Student Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>laser_geometry</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake_python</build_type>
  </export>
</package>
